feat: Add RFC Exceptions & Spring Cloud Config
